--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,8 @@
 *= require_tree .
 *= require_self
  */
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 #datatableContent{
     display: none;
