--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,10 @@
     <div class="container-fluid">
       <div class="row head1">
         <div class="col-md-3 logo">
-          <a href="<%= root_path %>" title="Home Page">
-            <%= image_tag 'logo2.png', class: 'img-responsive' %>
-          </a><br>application theme
+          <h1 class="logo"><a href="<%= root_path %>" title="Home Page">
+            <!-- %= image_tag 'logo2.png', class: 'img-responsive' %-->
+            fannela
+          </a></h1>
         </div>
         <div class="col-md-6">
           <div id="custom-search-input">
@@ -25,7 +26,7 @@
               <input id="searchengine" type="text" class="form-control input-md" placeholder="Rechercher un évenement" />
               <span class="input-group-btn">
               <button class="btn btn-default btn-md" type="button">
-                <i class="glyphicon glyphicon-search"></i>
+                <i class="fas fa-search"></i>
               </button>
             </span>
             </div>
@@ -62,33 +63,33 @@
             <h1>Filtrer</h1>
             <ul>
               <li>
-                <span class="glyphicon glyphicon-triangle-right"></span>
+                <span class="fas fa-arrow-circle-right"></span>
                 <input type="text" name="evn_startdate" rel="Date début" class="dateinterval" value="" placeholder="Date début">
               </li>
               <li>
-                <span class="glyphicon glyphicon-triangle-right"></span>
+                <span class="fas fa-arrow-circle-right"></span>
                 <input type="text" name="evn_enddate" rel="Date fin" class="dateinterval" value="" placeholder="Date fin">
               </li>
               <li>
-                <span class="glyphicon glyphicon-triangle-right"></span>
+                <span class="fas fa-arrow-circle-right"></span>
                 <select name="cn_id">
                   <option value="" class="title">Pays</option>
                 </select>
               </li>
               <li>
-                <span class="glyphicon glyphicon-triangle-right"></span>
+                <span class="fas fa-arrow-circle-right"></span>
                 <select name="thm_id">
                   <option value="" class="title">Thématique</option>
                 </select>
               </li>
               <li>
-                <span class="glyphicon glyphicon-triangle-right"></span>
+                <span class="fas fa-arrow-circle-right"></span>
                 <select name="cov_id">
                   <option value="" class="title">Couverture</option>
                 </select>
               </li>
               <li>
-                <span class="glyphicon glyphicon-triangle-right"></span>
+                <span class="fas fa-arrow-circle-right"></span>
                 <select name="typ_id">
                   <option value="" class="title">Événement</option>
                 </select>
