--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -11,6 +11,12 @@
 
 </table>
 
+<%= link_to 'Add user', new_category_path,  {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', class: 'btn btn-primary btn-lg'}  %>
+<div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content"></div>
+  </div>
+</div>
 <br>
 
 <%= link_to 'New Category', new_category_path %>
