--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
               <span class="glyphicon glyphicon-triangle-bottom"></span>
             </a>
             <div class="dropmenu">
-              <%= current_email.rol %>
+              <%= current_user.email %>
               <ul>
                 <li class="title">Pages utilisateurs:</li>
                 <li><a href="">Lecteur</a></li>
